- Se implementaron nuevos test unitarios para validar la lógica de LoginViewModel, UsuarioViewModel, CarritoViewModel y sus respectivas entidades. - Se integraron mejoras en build.gradle.kts para asegurar evitar mensajes de warnings.